src/antlr/MicroCParser.java
// Generated from C:/Users/mk96/IdeaProjects/Program-Analysis-DTU-Fall-21/src/antlr\MicroC.g4 by ANTLR 4.9.1
package antlr;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MicroCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, LBRACE=3, RBRACE=4, SEMI=5, LBRACKET=6, RBRACKET=7, 
		PLUS=8, MINUS=9, MULT=10, DIV=11, MOD=12, GT=13, GE=14, LT=15, LE=16, 
		EQ=17, NEQ=18, NOT=19, AND=20, OR=21, COMMA=22, ELSE=23, FST=24, SND=25, 
		INT=26, EQUAL=27, READ=28, WRITE=29, IF=30, WHILE=31, R=32, TRUE=33, FALSE=34, 
		INTEGER=35, IDENTIFIER=36, COMMENT=37, WS=38;
	public static final int
		RULE_program = 0, RULE_blockStmnt = 1, RULE_statement = 2, RULE_ifElse = 3,
            RULE_elseStmnt = 4, RULE_lAssign = 5, RULE_recordAssign = 6, RULE_whileStmnt = 7,
            RULE_readStmnt = 8, RULE_writeStmnt = 9, RULE_identifierExpr = 10, RULE_valueExpr = 11,
            RULE_recFst = 12, RULE_recSnd = 13, RULE_varIdentifier = 14, RULE_arrayIndexId = 15,
            RULE_number = 16, RULE_bexpr = 17, RULE_decl = 18, RULE_varDecl = 19,
            RULE_arrayDecl = 20, RULE_recordDecl = 21, RULE_opa = 22, RULE_opr = 23,
            RULE_opb = 24;
	private static String[] makeRuleNames() {
		return new String[] {
                "program", "blockStmnt", "statement", "ifElse", "elseStmnt", "lAssign",
                "recordAssign", "whileStmnt", "readStmnt", "writeStmnt", "identifierExpr",
                "valueExpr", "recFst", "recSnd", "varIdentifier", "arrayIndexId", "number",
			"bexpr", "decl", "varDecl", "arrayDecl", "recordDecl", "opa", "opr", 
			"opb"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "';'", "'['", "']'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'!'", 
			"'&'", "'|'", "','", "'else'", "'.fst'", "'.snd'", "'int'", "':='", "'read'", 
			"'write'", "'if'", "'while'", "'R'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", "LBRACKET", "RBRACKET", 
			"PLUS", "MINUS", "MULT", "DIV", "MOD", "GT", "GE", "LT", "LE", "EQ", 
			"NEQ", "NOT", "AND", "OR", "COMMA", "ELSE", "FST", "SND", "INT", "EQUAL", 
			"READ", "WRITE", "IF", "WHILE", "R", "TRUE", "FALSE", "INTEGER", "IDENTIFIER", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MicroC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MicroCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(MicroCParser.LBRACE, 0); }
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(MicroCParser.RBRACE, 0); }
		public TerminalNode EOF() { return getToken(MicroCParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(50);
			match(LBRACE);
                setState(51);
			decl();
                setState(52);
			statement();
                setState(53);
			match(RBRACE);
                setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockStmntContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(MicroCParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(MicroCParser.RBRACE, 0); }
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public BlockStmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockStmnt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitBlockStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockStmntContext blockStmnt() throws RecognitionException {
		BlockStmntContext _localctx = new BlockStmntContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_blockStmnt);
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(56);
			match(LBRACE);
                setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACE:
			case RBRACE:
			case INT:
				{
                    setState(57);
				decl();
				}
				break;
			case READ:
			case WRITE:
			case IF:
			case WHILE:
			case R:
			case IDENTIFIER:
				{
                    setState(58);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
                setState(61);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<IfElseContext> ifElse() {
			return getRuleContexts(IfElseContext.class);
		}
		public IfElseContext ifElse(int i) {
			return getRuleContext(IfElseContext.class,i);
		}
		public List<LAssignContext> lAssign() {
			return getRuleContexts(LAssignContext.class);
		}
		public LAssignContext lAssign(int i) {
			return getRuleContext(LAssignContext.class,i);
		}
		public List<RecordAssignContext> recordAssign() {
			return getRuleContexts(RecordAssignContext.class);
		}
		public RecordAssignContext recordAssign(int i) {
			return getRuleContext(RecordAssignContext.class,i);
		}
		public List<WhileStmntContext> whileStmnt() {
			return getRuleContexts(WhileStmntContext.class);
		}
		public WhileStmntContext whileStmnt(int i) {
			return getRuleContext(WhileStmntContext.class,i);
		}
		public List<ReadStmntContext> readStmnt() {
			return getRuleContexts(ReadStmntContext.class);
		}
		public ReadStmntContext readStmnt(int i) {
			return getRuleContext(ReadStmntContext.class,i);
		}
		public List<WriteStmntContext> writeStmnt() {
			return getRuleContexts(WriteStmntContext.class);
		}
		public WriteStmntContext writeStmnt(int i) {
			return getRuleContext(WriteStmntContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
                    setState(69);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
                        setState(63);
					ifElse();
					}
					break;
				case 2:
					{
                        setState(64);
					lAssign();
					}
					break;
				case 3:
					{
                        setState(65);
					recordAssign();
					}
					break;
				case 4:
					{
                        setState(66);
					whileStmnt();
					}
					break;
				case 5:
					{
                        setState(67);
					readStmnt();
					}
					break;
				case 6:
					{
                        setState(68);
					writeStmnt();
					}
					break;
				}
				}
                setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << READ) | (1L << WRITE) | (1L << IF) | (1L << WHILE) | (1L << R) | (1L << IDENTIFIER))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfElseContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(MicroCParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(MicroCParser.LPAREN, 0); }
		public BexprContext bexpr() {
			return getRuleContext(BexprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(MicroCParser.RPAREN, 0); }
		public BlockStmntContext blockStmnt() {
			return getRuleContext(BlockStmntContext.class,0);
		}
		public ElseStmntContext elseStmnt() {
			return getRuleContext(ElseStmntContext.class,0);
		}
		public IfElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifElse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitIfElse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfElseContext ifElse() throws RecognitionException {
		IfElseContext _localctx = new IfElseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifElse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(73);
			match(IF);
                setState(74);
			match(LPAREN);
                setState(75);
			bexpr(0);
                setState(76);
			match(RPAREN);
                setState(77);
                blockStmnt();
                setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
                    setState(78);
				elseStmnt();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseStmntContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(MicroCParser.ELSE, 0); }
		public BlockStmntContext blockStmnt() {
			return getRuleContext(BlockStmntContext.class,0);
		}
		public ElseStmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseStmnt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitElseStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseStmntContext elseStmnt() throws RecognitionException {
		ElseStmntContext _localctx = new ElseStmntContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_elseStmnt);
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(81);
			match(ELSE);
                setState(82);
			blockStmnt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LAssignContext extends ParserRuleContext {
        public IdentifierExprContext identifierExpr() {
            return getRuleContext(IdentifierExprContext.class, 0);
		}
		public TerminalNode EQUAL() { return getToken(MicroCParser.EQUAL, 0); }

        public ValueExprContext valueExpr() {
            return getRuleContext(ValueExprContext.class, 0);
		}
		public TerminalNode SEMI() { return getToken(MicroCParser.SEMI, 0); }
		public LAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lAssign; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitLAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LAssignContext lAssign() throws RecognitionException {
		LAssignContext _localctx = new LAssignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(84);
                identifierExpr();
                setState(85);
                match(EQUAL);
			setState(86);
                valueExpr(0);
			setState(87);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordAssignContext extends ParserRuleContext {
		public TerminalNode R() { return getToken(MicroCParser.R, 0); }
		public TerminalNode EQUAL() { return getToken(MicroCParser.EQUAL, 0); }
		public TerminalNode LPAREN() { return getToken(MicroCParser.LPAREN, 0); }

        public List<ValueExprContext> valueExpr() {
            return getRuleContexts(ValueExprContext.class);
        }

        public ValueExprContext valueExpr(int i) {
            return getRuleContext(ValueExprContext.class, i);
		}
		public TerminalNode COMMA() { return getToken(MicroCParser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(MicroCParser.RPAREN, 0); }
		public TerminalNode SEMI() { return getToken(MicroCParser.SEMI, 0); }
		public RecordAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordAssign; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitRecordAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecordAssignContext recordAssign() throws RecognitionException {
		RecordAssignContext _localctx = new RecordAssignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_recordAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(89);
                match(R);
                setState(90);
                match(EQUAL);
                setState(91);
                match(LPAREN);
                setState(92);
                valueExpr(0);
                setState(93);
                match(COMMA);
			setState(94);
                valueExpr(0);
			setState(95);
                match(RPAREN);
                setState(96);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStmntContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(MicroCParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(MicroCParser.LPAREN, 0); }
		public BexprContext bexpr() {
			return getRuleContext(BexprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(MicroCParser.RPAREN, 0); }
		public BlockStmntContext blockStmnt() {
			return getRuleContext(BlockStmntContext.class,0);
		}
		public WhileStmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStmnt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitWhileStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStmntContext whileStmnt() throws RecognitionException {
		WhileStmntContext _localctx = new WhileStmntContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_whileStmnt);
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(98);
			match(WHILE);
                setState(99);
			match(LPAREN);
                setState(100);
			bexpr(0);
                setState(101);
			match(RPAREN);
                setState(102);
			blockStmnt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadStmntContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(MicroCParser.READ, 0); }

        public IdentifierExprContext identifierExpr() {
            return getRuleContext(IdentifierExprContext.class, 0);
		}
		public TerminalNode SEMI() { return getToken(MicroCParser.SEMI, 0); }
		public ReadStmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readStmnt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitReadStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadStmntContext readStmnt() throws RecognitionException {
		ReadStmntContext _localctx = new ReadStmntContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_readStmnt);
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(104);
                match(READ);
                setState(105);
                identifierExpr();
                setState(106);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteStmntContext extends ParserRuleContext {
		public TerminalNode WRITE() { return getToken(MicroCParser.WRITE, 0); }

        public ValueExprContext valueExpr() {
            return getRuleContext(ValueExprContext.class, 0);
		}
		public TerminalNode SEMI() { return getToken(MicroCParser.SEMI, 0); }
		public WriteStmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_writeStmnt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitWriteStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WriteStmntContext writeStmnt() throws RecognitionException {
		WriteStmntContext _localctx = new WriteStmntContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_writeStmnt);
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(108);
                match(WRITE);
                setState(109);
                valueExpr(0);
			setState(110);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

    public static class IdentifierExprContext extends ParserRuleContext {
		public ArrayIndexIdContext arrayIndexId() {
			return getRuleContext(ArrayIndexIdContext.class,0);
		}
		public VarIdentifierContext varIdentifier() {
			return getRuleContext(VarIdentifierContext.class,0);
		}
		public RecFstContext recFst() {
			return getRuleContext(RecFstContext.class,0);
		}
		public RecSndContext recSnd() {
			return getRuleContext(RecSndContext.class,0);
		}

        public IdentifierExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

        @Override
        public int getRuleIndex() {
            return RULE_identifierExpr;
        }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MicroCVisitor)
                return ((MicroCVisitor<? extends T>) visitor).visitIdentifierExpr(this);
			else return visitor.visitChildren(this);
		}
	}

    public final IdentifierExprContext identifierExpr() throws RecognitionException {
        IdentifierExprContext _localctx = new IdentifierExprContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_identifierExpr);
		try {
            setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
                    setState(112);
				arrayIndexId();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
                    setState(113);
				varIdentifier();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
                    setState(114);
				recFst();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
                    setState(115);
				recSnd();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

    public static class ValueExprContext extends ParserRuleContext {
        public IdentifierExprContext identifierExpr() {
            return getRuleContext(IdentifierExprContext.class, 0);
        }

        public NumberContext number() {
            return getRuleContext(NumberContext.class, 0);
        }

        public List<ValueExprContext> valueExpr() {
            return getRuleContexts(ValueExprContext.class);
        }

        public ValueExprContext valueExpr(int i) {
            return getRuleContext(ValueExprContext.class, i);
        }

        public OpaContext opa() {
            return getRuleContext(OpaContext.class, 0);
        }

        public ValueExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_valueExpr;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MicroCVisitor) return ((MicroCVisitor<? extends T>) visitor).visitValueExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ValueExprContext valueExpr() throws RecognitionException {
        return valueExpr(0);
    }

    private ValueExprContext valueExpr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ValueExprContext _localctx = new ValueExprContext(_ctx, _parentState);
        ValueExprContext _prevctx = _localctx;
        int _startState = 22;
        enterRecursionRule(_localctx, 22, RULE_valueExpr, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(121);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case R:
                    case IDENTIFIER: {
                        setState(119);
                        identifierExpr();
                    }
                    break;
                    case INTEGER: {
                        setState(120);
                        number();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                _ctx.stop = _input.LT(-1);
                setState(129);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new ValueExprContext(_parentctx, _parentState);
                                pushNewRecursionContext(_localctx, _startState, RULE_valueExpr);
                                setState(123);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(124);
                                opa();
                                setState(125);
                                valueExpr(2);
                            }
                        }
                    }
                    setState(131);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

	public static class RecFstContext extends ParserRuleContext {
		public TerminalNode FST() { return getToken(MicroCParser.FST, 0); }
		public TerminalNode R() { return getToken(MicroCParser.R, 0); }
		public RecFstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recFst; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitRecFst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecFstContext recFst() throws RecognitionException {
		RecFstContext _localctx = new RecFstContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_recFst);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
                setState(132);
			match(R);
			}
                setState(133);
			match(FST);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecSndContext extends ParserRuleContext {
		public TerminalNode SND() { return getToken(MicroCParser.SND, 0); }
		public TerminalNode R() { return getToken(MicroCParser.R, 0); }
		public RecSndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recSnd; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitRecSnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecSndContext recSnd() throws RecognitionException {
		RecSndContext _localctx = new RecSndContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_recSnd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
                setState(135);
			match(R);
			}
                setState(136);
			match(SND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarIdentifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(MicroCParser.IDENTIFIER, 0); }
		public VarIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varIdentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MicroCVisitor ) return ((MicroCVisitor<? extends T>)visitor).visitVarIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarIdentifierContext varIdentifier() throws RecognitionException {
		VarIdentifierContext _localctx = new VarIdentifierContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_varIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(138);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayIndexIdContext extends ParserRuleContext {
        public List<TerminalNode> IDENTIFIER() {
            return getTokens(MicroCParser.IDENTIFIER);
        }

        public TerminalNode IDENTIFIER(int i) {
            return getToken(MicroCParser.IDENTIFIER, i);
        }

        public TerminalNode LBRACKET() {
            return getToken(MicroCParser.LBRACKET, 0);
        }

        public TerminalNode RBRACKET() {
            return getToken(MicroCParser.RBRACKET, 0);
        }
